# Cracked

./: .gitignore  CMakeLists.txt  README.md
01_Arrays_and_Strings/01_Is_Unique/: CMakeLists.txt
01_Arrays_and_Strings/02_Check_Permutation/: CMakeLists.txt  main.cpp
01_Arrays_and_Strings/04_Palindrome_Permutation/: CMakeLists.txt
01_Arrays_and_Strings/05_One_Way/: CMakeLists.txt  main.cpp
01_Arrays_and_Strings/06_String_Compression/: main.cpp
01_Arrays_and_Strings/07_Rotate_Matrix/: main.cpp
01_Arrays_and_Strings/08_Zero_Matrix/: CMakeLists.txt  main.cpp
01_Arrays_and_Strings/09_String_Rotation/: CMakeLists.txt  main.cpp
02_Linked_Lists/01_Remove_Dups/: CMakeLists.txt  main.cpp
02_Linked_Lists/02_Return_Kth_to_Last/: CMakeLists.txt  main.cpp
02_Linked_Lists/03_Delete_Middle_Node/: CMakeLists.txt  main.cpp
02_Linked_Lists/04_Partition/: CMakeLists.txt  main.cpp
02_Linked_Lists/05_Sum_Lists/: main.cpp
02_Linked_Lists/06_Palindrome/: CMakeLists.txt  main.cpp
02_Linked_Lists/07_Intersection/: main.cpp
02_Linked_Lists/08_Loop_Detection/: CMakeLists.txt  main.cpp
03_Stacks_and_Queues/01_Three_in_One/: main.cpp
03_Stacks_and_Queues/03_Stack_of_Plates/: main.cpp
03_Stacks_and_Queues/04_Queue_via_Stacks/: main.cpp
03_Stacks_and_Queues/05_Sort_Stack/: main.cpp
03_Stacks_and_Queues/06_Animal_Shelter/: main.cpp
04_Trees_and_Graphs/01_Route_Between_Nodes/: main.cpp
04_Trees_and_Graphs/02_Minimal_Tree/: main.cpp
04_Trees_and_Graphs/03_List_of_Depths/: main.cpp
04_Trees_and_Graphs/04_Check_Balanced/: main.cpp
04_Trees_and_Graphs/05_Validate_BST/: main.cpp
04_Trees_and_Graphs/06_Successor/: CMakeLists.txt  main.cpp
04_Trees_and_Graphs/07_Build_Order/: CMakeLists.txt
04_Trees_and_Graphs/08_First_Common_Ancestor/: main.cpp
04_Trees_and_Graphs/09_BST_Sequences/: CMakeLists.txt
04_Trees_and_Graphs/10_Check_Subtree/: CMakeLists.txt
05_Bit_Manipulation/01_Insertion/: CMakeLists.txt  main.cpp
05_Bit_Manipulation/02_Binary_to_String/: main.cpp
05_Bit_Manipulation/03_Flip_Bit_to_Win/: CMakeLists.txt
05_Bit_Manipulation/04_Next_Number/: CMakeLists.txt
05_Bit_Manipulation/05_Conversion/: CMakeLists.txt
include/: Graph.h  LinkedList.h  Utilities.h
src/: CMakeLists.txt
src/01_Arrays_and_Strings/: 01_IsUnique.cpp  02_CheckPermutation.cpp  04_PalindromePermutation.cpp  05_OneWay.cpp  06_StringCompression.cpp  07_RotateMatrix.cpp  08_ZeroMatrix.cpp  09_StringRotation.cpp  CMakeLists.txt
src/01_Arrays_and_Strings/01_Is_Unique/: main.cpp
src/01_Arrays_and_Strings/04_Palindrome_Permutation/: main.cpp
src/01_Arrays_and_Strings/06_String_Compression/: CMakeLists.txt
src/01_Arrays_and_Strings/07_Rotate_Matrix/: CMakeLists.txt
src/01_Arrays_and_Strings/08_Zero_Matrix/: main.cpp
src/02_Linked_Lists/: 01_RemoveDups.cpp  02_ReturnKthToLast.cpp  03_DeleteMiddleNode.cpp  04_Partition.cpp  05_SumLists.cpp  06_Palindrome.cpp  07_Intersection.cpp  08_LoopDetection.cpp  CMakeLists.txt
src/02_Linked_Lists/02_Return_Kth_to_Last/: main.cpp
src/02_Linked_Lists/05_Sum_Lists/: CMakeLists.txt  main.cpp
src/02_Linked_Lists/07_Intersection/: CMakeLists.txt
src/03_Stacks_and_Queues/: CMakeLists.txt
src/03_Stacks_and_Queues/01_Three_in_One/: CMakeLists.txt
src/03_Stacks_and_Queues/02_Stack_Min/: CMakeLists.txt  main.cpp
src/03_Stacks_and_Queues/03_Stack_of_Plates/: CMakeLists.txt
src/03_Stacks_and_Queues/04_Queue_via_Stacks/: CMakeLists.txt
src/03_Stacks_and_Queues/05_Sort_Stack/: CMakeLists.txt
src/03_Stacks_and_Queues/06_Animal_Shelter/: CMakeLists.txt
src/04_Trees_and_Graphs/: 07_BuildOrder.cpp  12_PathsWithSum.cpp  CMakeLists.txt
src/04_Trees_and_Graphs/01_Route_Between_Nodes/: CMakeLists.txt
src/04_Trees_and_Graphs/02_Minimal_Tree/: CMakeLists.txt
src/04_Trees_and_Graphs/03_List_of_Depths/: CMakeLists.txt
src/04_Trees_and_Graphs/04_Check_Balanced/: CMakeLists.txt
src/04_Trees_and_Graphs/05_Validate_BST/: CMakeLists.txt
src/04_Trees_and_Graphs/08_First_Common_Ancestor/: CMakeLists.txt
src/04_Trees_and_Graphs/09_BST_Sequences/: main.cpp
src/04_Trees_and_Graphs/10_Check_Subtree/: main.cpp
src/04_Trees_and_Graphs/11_Random_Node/: CMakeLists.txt  main.cpp
src/04_Trees_and_Graphs/12_Paths_with_Sum/: CMakeLists.txt
src/05_Bit_Manipulation/: CMakeLists.txt
src/05_Bit_Manipulation/01_Insertion/: CMakeLists.txt  main.cpp
src/05_Bit_Manipulation/02_Binary_to_String/: CMakeLists.txt
src/05_Bit_Manipulation/03_Flip_Bit_to_Win/: main.cpp
src/05_Bit_Manipulation/04_Next_Number/: CMakeLists.txt  main.cpp
src/05_Bit_Manipulation/05_Conversion/: main.cpp
src/Tests/: CMakeLists.txt
src/Tests/01_Arrays_and_Strings_Tests/: 01_IsUniqueTest.cpp  02_CheckPermutationTest.cpp  04_PalindromePermutationTest.cpp  05_OneWayTest.cpp  06_StringCompressionTest.cpp  07_RotateMatrixTest.cpp  08_ZeroMatrixTest.cpp  09_StringRotationTest.cpp  CMakeLists.txt
src/Tests/02_Linked_Lists_Tests/: 01_RemoveDupsTest.cpp  02_ReturnKthToLastTest.cpp  03_DeleteMiddleNodeTest.cpp  04_PartitionTest.cpp  05_SumListsTest.cpp  06_PalindromeTest.cpp  07_IntersectionTest.cpp  08_LoopDetectionTest.cpp  CMakeLists.txt
src/Utilities/: CMakeLists.txt  Utilities.cpp
src/include/: 01_IsUnique.h  01_RemoveDups.h  02_CheckPermutation.h  02_ReturnTthToLast.h  03_DeleteMiddleNode.h  04_PalindromePermutation.h  04_Partition.h  05_OneWay.h  05_SumLists.h  06_Palindrome.h  06_StringCompression.h  07_Intersection.h  07_RotateMatrix.h  08_LoopDetection.h  08_ZeroMatrix.h  09_StringRotation.h  LinkedList.h  LinkedList2.h  Tree.h  Utilities.h
