cmake_minimum_required(VERSION 3.1.0)
project(Cracking VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_FLAGS "--std=c++14 ${CMAKE_CXX_FLAGS}")

include_directories(include)

add_subdirectory(01_Arrays_and_Strings/01_Is_Unique)
add_subdirectory(01_Arrays_and_Strings/02_Check_Permutation)
add_subdirectory(01_Arrays_and_Strings/04_Palindrome_Permutation)
add_subdirectory(01_Arrays_and_Strings/05_One_Way)
add_subdirectory(01_Arrays_and_Strings/06_String_Compression)
add_subdirectory(01_Arrays_and_Strings/07_Rotate_Matrix)
add_subdirectory(01_Arrays_and_Strings/08_Zero_Matrix)
add_subdirectory(01_Arrays_and_Strings/09_String_Rotation)

add_subdirectory(02_Linked_Lists/01_Remove_Dups)
add_subdirectory(02_Linked_Lists/02_Return_Kth_to_Last)
add_subdirectory(02_Linked_Lists/03_Delete_Middle_Node)
add_subdirectory(02_Linked_Lists/04_Partition)
add_subdirectory(02_Linked_Lists/05_Sum_Lists)
add_subdirectory(02_Linked_Lists/06_Palindrome)
add_subdirectory(02_Linked_Lists/07_Intersection)
add_subdirectory(02_Linked_Lists/08_Loop_Detection)

add_subdirectory(03_Stacks_and_Queues/01_Three_in_One)
add_subdirectory(03_Stacks_and_Queues/02_Stack_Min)
add_subdirectory(03_Stacks_and_Queues/03_Stack_of_Plates)
add_subdirectory(03_Stacks_and_Queues/04_Queue_via_Stacks)
add_subdirectory(03_Stacks_and_Queues/05_Sort_Stack)
add_subdirectory(03_Stacks_and_Queues/06_Animal_Shelter)

add_subdirectory(04_Trees_and_Graphs/01_Route_Between_Nodes)
add_subdirectory(04_Trees_and_Graphs/02_Minimal_Tree)
add_subdirectory(04_Trees_and_Graphs/03_List_of_Depths)
add_subdirectory(04_Trees_and_Graphs/04_Check_Balanced)
add_subdirectory(04_Trees_and_Graphs/05_Validate_BST)
add_subdirectory(04_Trees_and_Graphs/06_Successor)
add_subdirectory(04_Trees_and_Graphs/07_Build_Order)
add_subdirectory(04_Trees_and_Graphs/08_First_Common_Ancestor)
add_subdirectory(04_Trees_and_Graphs/09_BST_Sequences)
add_subdirectory(04_Trees_and_Graphs/10_Check_Subtree)
add_subdirectory(04_Trees_and_Graphs/11_Random_Node)
add_subdirectory(04_Trees_and_Graphs/12_Paths_with_Sum)

add_subdirectory(05_Bit_Manipulation/01_Insertion)
add_subdirectory(05_Bit_Manipulation/02_Binary_to_String)
add_subdirectory(05_Bit_Manipulation/03_Flip_Bit_to_Win)
add_subdirectory(05_Bit_Manipulation/04_Next_Number)
add_subdirectory(05_Bit_Manipulation/05_Conversion)
