add_executable(ThreeInOne
    01_ThreeInOne.cpp
)

add_executable(StackMin
    02_StackMin.cpp
)

add_executable(StackOfPlates
    03_StackOfPlates.cpp
)

add_executable(QueueViaStacks
    04_QueueViaStacks.cpp
)

add_executable(SortStack
    05_SortStack.cpp
)

add_executable(AnimalShelter
    06_AnimalShelter.cpp
)
