add_executable(RouteBetweenNodes
    01_RouteBetweenNodes.cpp
)

add_executable(MinimalTree
    02_MinimalTree.cpp
)

add_executable(ListOfDepths
    03_ListOfDepths.cpp
)

add_executable(CheckBalanced
    04_CheckBalanced.cpp
)

add_executable(ValidateBST
    05_ValidateBST.cpp
)

add_executable(Successor
    06_Successor.cpp
)

add_executable(BuildOrder
    07_BuildOrder.cpp
)

add_executable(FirstCommonAncestor
    08_FirstCommonAncestor.cpp
)

add_executable(BSTSequences
    09_BSTSequences.cpp
)

add_executable(CheckSubtree
    10_CheckSubtree.cpp
)

add_executable(RandomNode
    11_RandomNode.cpp
)

add_executable(PathsWithSum
    12_PathsWithSum.cpp
)
